dataset1235/2025-2/2947369575/users/126276963/executions/1003782500_3921830315.log
== SUBMISSION (2025-08-28 15:32:24)
-- CODE: 
litros=float(input("Digite a quantidade de litros abastecidos:"))
preco_gasolina:2.86
valor_oleo=50.00
subtotal=(litros*preco_gasolina)+valor_oleo
icms=subtotal*(34/100)
total=subtotal+icms
print("O valor total a ser pago é:", round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:32:51)
-- CODE: 
litros=float(input("Digite a quantidade de litros abastecidos:"))
preco_gasolina=2.86
valor_oleo=50.00
subtotal=(litros*preco_gasolina)+valor_oleo
icms=subtotal*(34/100)
total=subtotal+icms
print("O valor total a ser pago é:", round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Digite a quantidade de litros abastecidos:O valor total a ser pago é: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:32:26)
-- CODE: 
litros=float(input("Digite a quantidade de litros abastecidos:"))
preco_gasolina:2.86
valor_oleo=50.00
subtotal=(litros*preco_gasolina)+valor_oleo
icms=subtotal*(34/100)
total=subtotal+icms
print("O valor total a ser pago é:", round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    subtotal=(litros*preco_gasolina)+valor_oleo
                     ^^^^^^^^^^^^^^
NameError: name 'preco_gasolina' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
